--- a/index.html
+++ b/index.html
@@ -61,11 +61,6 @@
             <h4>Edit Building Info</h4>
             <a id="updateCloseBtn">Close</a>
             <br>
-            <input type="text"  name="game[id]" placeholder="Building Name"/>
-            <input type="date"  name="Built Date[date]">
-            <input type="text" name="game[location]" placeholder="Address/Location"/>
-            <input type="text" name="game[home_team]" placeholder="Building Price"/>
-            <input type="number" name="game[home_score]" placeholder="Sqftage"/>
             <button type="submit">Update</button>
           </form>
           <!-- through this form a user create games -->
@@ -78,6 +73,11 @@
             <input type="text" name="game[location]" placeholder="Address/Location"/>
             <input type="text" name="game[home_team]" placeholder="Building Price"/>
             <input type="number" name="game[home_score]" placeholder="Sqftage"/>
+            <input type="text"  name="building[id]" placeholder="Building Name"/>
+            <input type="date" name="Built Date[date]" />
+            <input type="text" name="building[location]" placeholder="Address/Location"/>
+            <input type="text" name="building[price]" placeholder="Building Price"/>
+            <input type="number" name="square footage" placeholder="Sqftage"/>
             <button type="submit">Create</button>
           </form>
         </div>
