Handlebars are getting somewhere

--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@
             <input type="number" name="building[sq_feet]" placeholder="Sqftage"/>
             <button type="submit">Create</button>
           </form>
+          <form id="view-buildings">
+            <input type="submit" value="View Buildings"/>
+          </form>
         <!-- </div> -->
       <!-- </aside> -->
 
