--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <!-- </fieldset> -->
           </form>
 
-          <button id="clearBuildings" class="btn btn-primary">Destroy all buildings</button>
+          <button id="clearBuildings" class="btn btn-primary">Clear building Inventory</button>
 
             <!-- <form id="deleteBuilding">
 
