Almost final version

--- a/index.html
+++ b/index.html
@@ -101,10 +101,9 @@
             <!-- </fieldset> -->
           </form>
 
-          <button id="clearBuildings" class="btn btn-primary">Clear building Inventory</button>
+          <button id="clearBuildings" class="btn btn-primary">Clear your inventory</button>
 
             <!-- <form id="deleteBuilding">
-
               <button>Delete</button>
             </form> -->
           <!-- </div> -->
