--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <input type="number" name="building[price]" placeholder="Building Price"/>
             <label>Built Date:</label>
             <input type="date" name="building[built_date]" placeholder="Built Date" />
-            <input type="number" name="building[sq_feet]" placeholder="Sqftage"/>
+            <input type="number" name="building[sq_feet]" placeholder="Sq Ft"/>
             <button type="submit">Update</button>
           </form>
           <!-- user create a building -->
@@ -85,7 +85,7 @@
             <input type="number" name="building[price]" placeholder="Building Price"/>
             <label>Built Date:</label>
             <input type="date" name="building[built_date]" placeholder="Built Date" />
-            <input type="number" name="building[sq_feet]" placeholder="Sqftage"/>
+            <input type="number" name="building[sq_feet]" placeholder="Sq Ft"/>
             <button type="submit">Create</button>
           </form>
           <form id="view-buildings">
@@ -100,7 +100,8 @@
               <input type="submit" value="Delete">
             <!-- </fieldset> -->
           </form>
-
+            <br>
+            <br>
           <button id="clearBuildings" class="btn btn-primary">Clear your inventory</button>
 
             <!-- <form id="deleteBuilding">
